# PersonList_DB_manager

./: CMakeLists.txt  main.cpp  users_sqlite3_functions.c  users_sqlite3_functions.h
